
2013-08-11  GoldenKevin  (revision 227)

	* Do not take cash unless the staging inventory has room.
	* Fixed all packets for couple and friendship rings.
	* Implemented buy couple and friendship rings in cash shop.

2013-08-11  GoldenKevin  (revision 228)

	* Implemented SN blocking system in cash shop. Initialized to block stock of
	Safety Charms and Venus Fireworks that should not be on sale.
	* Formatted some of the unknown bytes used in EnterShopHandler.writeEnterCs
	to make the packet structure a bit clearer.

2013-08-13  GoldenKevin  (revision 229)

	* Implemented Best Item list in cash shop.
	* Implemented custom commodity overrides in cash shop.
	* Implemented limited quantity commodities in cash shop.

2013-08-13  GoldenKevin  (revision 230)

	* Removed test lines from cashshopblockedserialnumbers.txt,
	cashshopcommodityoverrides.txt, and cashshoplimitedcommodities.txt.
	* Fixed error 38 when writing cash shop error ERROR_OUT_OF_STOCK.
	* Implemented buying items with mesos in cash shop.

2013-08-13  GoldenKevin  (revision 231)

	* Check recipient name when sending gifts.
	* Gift recipients logged into the cash shop will see newly received gifts in
	their staging.
	* Implement buying and gifting packages.

2013-08-16  GoldenKevin  (revision 232)

	* Fixed expire dates of pets bought in the cash shop.
	* Commodity overrides now override commodities server side as well.
	* Implemented expire cash items in cash shop. Implemented expire cash items
	and expirable quest items in a channel.

2013-08-16  GoldenKevin  (revision 233)

	* Cancel item expire task in ShopCharacter and GameCharacter on disconnect
	to prevent memory leaks and to tidy up the scheduler queue.
	* Fixed cooldown persistence and canceling in ShopCharacter. Removed
	unneeded packet for players in shop server.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.